# memory-web

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  partykit.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  main.rs
public/: index.html
shared/src/: lib.rs
src/client/: client.tsx  index.html  styles.css
src/client/room/: index.html  joining.js  script.js  styles.css
