[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
gloo-net = "0.7.0"
leptos = { version = "0.8.17", features = ["csr", "nightly"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { version = "0.1.0", path = "../shared" }
wasm-bindgen-futures = "0.4.68"
